--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -93,18 +93,16 @@
                             <img class="app-section__image_large" src="images/App%20image.png" alt="">
                         </div>
                         <div class="app-section__content">
-                            <h2 class="app-section__heading"><span class="primary-blue">Complete</span> Order and make Payment
+                            <h2 class="app-section__heading"><span class="primary-blue">Total to pay of $7.9</span>
                             </h2>
-                            <h3 class="app-section__subheading">One app with all the <b>best crypto features</b> already
-                                built into it.</h3>
+                            <h3 class="app-section__subheading">Please choose a payment option to complete you order <b></h3>
                             <div clas="apps">
-                                
                                    
                                    
                                 <ul class="nav nav-pills nav-justified" style="margin-bottom: 20px;">
                                     
                                     
-                                        <form id="footer-subscribe-form"  action="/pay" method="post" name="footer-subscriber-form_001" style="float:left; padding: 20px;">
+                                        <form id="footer-subscribe-form"  action="/checkout" method="post" name="footer-subscriber-form_001" style="float:left; padding: 20px;">
                                             <li class="active">
                                             
                                             <button type="submit" style="padding: 10px; border-radius: 50px; background-color: rgb(232, 152, 3);"><img width="195" height="46" src="images/paypal.svg" class="logo" syle="padding: 5px;"></button>
